# gta-updater

./: .gitignore  CHANGELOG.md  Cargo.toml  GITHUB_TOKEN.md  LICENSE  OPTIMIZATION.md  README.md  SUMMARY.md  config.example.toml
.github/workflows/: release.yml
src/: cli.rs  main.rs  updater.rs
src/conf/: mod.rs
