[package]
name = "gta-updater"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gta"
path = "src/main.rs"

[dependencies]
tokio = { version = "*", features = ["full"] }
futures-util = "0.3.32"
reqwest = { version = "*", features = ["json", "stream"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
semver = "*"
anyhow = "*"
config = { version = "*", default-features = false, features = ["toml"] }
toml = "*"
dirs = "*"
indicatif = "*"