[package]
name = "gta-updater"
version = "0.1.0"
edition = "2021"
authors = ["Serein-sz"]
description = "A command-line tool to automatically update GitHub Release assets"
license = "MIT"
repository = "https://github.com/Serein-sz/gta-updater"

[[bin]]
name = "gta"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
futures-util = "0.3.32"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
anyhow = "1.0"
config = { version = "0.14", default-features = false, features = ["toml"] }
toml = "0.8"
dirs = "6.0"
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"